:bug: Fix tooltip arrow not showing on desktop

--- a/src/components/configuration/configuration.scss
+++ b/src/components/configuration/configuration.scss
@@ -6,6 +6,7 @@
   margin-top: 30px;
   box-shadow: 0px 0px 8px 1px #b0b0b0;
   z-index: 100;
+  position: relative;
 }
 
 .container--mobile {
